# Cmake_Examples

./: README.md
directory_test/: CMakeLists.txt
directory_test/include/: Student.h
directory_test/src/: Student.cpp  main.cpp
sail_game/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sail_game
shared_library_build/: CMakeLists.txt
static_library_build/: CMakeLists.txt
static_library_build/src/: Student.cpp
using_share_or_static_library/: CMakeLists.txt  main.cpp
